Update print statement from 'Hello' to 'Goodbye'

--- a/index1.html
+++ b/index1.html
@@ -32,7 +32,7 @@
       </ul>
     </header>
 
-    <video src="img/Un.mp4" muted loop autoplay></video>
+    <video src="Vi/N.mp4" muted loop autoplay></video>
 
     <div class="content">
       <div class="textBox">
@@ -553,5 +553,6 @@ window.addEventListener('load', () => {
 
 </body>
 </html>
+
 
 
