--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Digits n Data</title>
+   <link rel="icon" type="image/png" href="img/favicon2.png">
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@500;700&display=swap');
     * {
@@ -214,6 +215,7 @@
 
 </body>
 </html>
+
 
 
 
