--- a/index1.html
+++ b/index1.html
@@ -3,10 +3,11 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Marvel x Fanta Scroll Experience</title>
+  <title>Digits n Data</title>
+   <link rel="icon" type="image/png" href="img/favicon2.png">
 
   <!-- Icons / Fonts / Plugins -->
-  <link rel="icon" href="img/logo-name.ico" type="image/x-icon" />
+
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@600&display=swap" rel="stylesheet" />
@@ -553,6 +554,7 @@ window.addEventListener('load', () => {
 
 </body>
 </html>
+
 
 
 
