--- a/in.html
+++ b/in.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Digits n Data Animation</title>
+  <title>Digits n Data </title>
+   <link rel="icon" type="image/png" href="img/favicon2.png">
   <link href="https://fonts.googleapis.com/css2?family=Passion+One&display=swap" rel="stylesheet">
 
   <style>
@@ -262,3 +263,4 @@
 
 </body>
 </html>
+
