--- a/1.html
+++ b/1.html
@@ -8,6 +8,7 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>SQL Challenge Playground — Avengers Timeline Crisis</title>
+   <link rel="icon" type="image/png" href="img/favicon2.png">
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
 <style>
 :root{
@@ -414,3 +415,4 @@ window.addEventListener("resize",()=>{viewWidth=window.innerWidth;viewHeight=win
 
 </body>
 </html>
+
