Update HTML structure and styles for new content

--- a/w.html
+++ b/w.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Responsive tsParticles Fireworks</title>
+  <title>Digits n Data</title>
+   <link rel="icon" type="image/png" href="img/favicon2.png">
 
   <!-- font-awesome (kept in case you want icons later) -->
   <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -550,3 +551,4 @@
   </script>
 </body>
 </html>
+
