--- a/quiz1.html
+++ b/quiz1.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>Quiz Blaster — Responsive Vanilla JS + Sound</title>
+   <link rel="icon" type="image/png" href="img/favicon2.png">
 <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 <style>
   :root{
@@ -691,3 +692,4 @@ window.addEventListener('resize', ()=>{
 </script>
 </body>
 </html>
+
