--- a/quiz3.html
+++ b/quiz3.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>Quiz Blaster — Responsive Vanilla JS + Sound</title>
 <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+   <link rel="icon" type="image/png" href="img/favicon2.png">
 <style>
   :root{
     --bg:#000;
@@ -691,3 +692,4 @@ window.addEventListener('resize', ()=>{
 </script>
 </body>
 </html>
+
