--- a/case1.html
+++ b/case1.html
@@ -6,6 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<title>Digits n Data</title>
     <link rel="icon" href="img/logo1.png" type="image/png">
+		 <link rel="icon" type="image/png" href="img/favicon2.png">
 		<link rel="stylesheet" href="css3/main1.css" />
 		<noscript><link rel="stylesheet" href="css3/noscript.css" /></noscript>
 	</head>
@@ -206,4 +207,5 @@ INSERT INTO Ratings (shop_id, customer_name, rating, review) VALUES
 									
                                     
 	</body>
+
 </html>
