--- a/case5.html
+++ b/case5.html
@@ -6,6 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<title>Digits n Data</title>
     <link rel="icon" href="img/logo1.png" type="image/png">
+		 <link rel="icon" type="image/png" href="img/favicon2.png">
 		<link rel="stylesheet" href="css3/main1.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
@@ -184,4 +185,5 @@ INSERT INTO Panda_Info (Panda_ID, Name, Age, Gender, Weight, Species, Health_Sta
 									
                                     
 	</body>
+
 </html>
