--- a/case8.html
+++ b/case8.html
@@ -7,6 +7,7 @@
 		<title>Digits n Data</title>
     <link rel="icon" href="img/logo1.png" type="image/png">
 		<link rel="stylesheet" href="css3/main1.css" />
+		 <link rel="icon" type="image/png" href="img/favicon2.png">
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
@@ -261,4 +262,5 @@ INSERT INTO FilterUsage (user_id, filter_id, used_at) VALUES
 									
                                     
 	</body>
+
 </html>
